manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-sample-app-service
  namespace: default
spec:
  selector:
    app: cicd-sample-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
